📚 🔧 docs: Fix incorrect module invocation patterns in documentation

--- a/internvl_codebase_demo.ipynb
+++ b/internvl_codebase_demo.ipynb
@@ -238,9 +238,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Comprehensive test images from multiple directories\ntest_image_collections = {\n    \"examples\": [\n        \"examples/Costco-petrol.jpg\",\n        \"examples/Receipt_2024-05-25_070641.jpg\", \n        \"examples/bank statement - ANZ highlight.png\",\n        \"examples/double-petrol.jpg\",\n        \"examples/driverlicense.jpg\",\n        \"examples/eg-petrol.jpg\",\n        \"examples/meeting_chrohosome.png\",\n        \"examples/receipt-template-us-modern-red-750px.png\",\n        \"examples/stout.png\",\n        \"examples/test_receipt.png\"\n    ],\n    \"synthetic\": [\n        \"data/synthetic/images/sample_receipt_001.jpg\",\n        \"data/synthetic/images/sample_receipt_002.jpg\",\n        \"data/synthetic/images/sample_receipt_003.jpg\"\n    ],\n    \"sroie\": [\n        \"data/sroie/images/sroie_test_000.jpg\",\n        \"data/sroie/images/sroie_test_001.jpg\"\n    ],\n    \"root\": [\n        \"test_receipt.png\"\n    ]\n}\n\n# Check which images exist and categorize them\navailable_images = {}\nfor category, paths in test_image_collections.items():\n    available_images[category] = []\n    for path in paths:\n        if Path(path).exists():\n            available_images[category].append(path)\n            print(f\"✅ Found {category}: {Path(path).name}\")\n        else:\n            print(f\"❌ Missing {category}: {path}\")\n\n# Flatten all available images for easy access\nall_available_images = []\nfor _category, paths in available_images.items():\n    all_available_images.extend(paths)\n\nprint(f\"\\nTotal available test images: {len(all_available_images)}\")\nfor category, paths in available_images.items():\n    if paths:\n        print(f\"  {category}: {len(paths)} images\")\n\nprint(f\"\\nFirst 5 images for testing: {all_available_images[:5]}\")"
+   "source": [
+    "# Comprehensive test images from multiple directories\n",
+    "test_image_collections = {\n",
+    "    \"examples\": [\n",
+    "        \"examples/Costco-petrol.jpg\",\n",
+    "        \"examples/Receipt_2024-05-25_070641.jpg\", \n",
+    "        \"examples/bank statement - ANZ highlight.png\",\n",
+    "        \"examples/double-petrol.jpg\",\n",
+    "        \"examples/driverlicense.jpg\",\n",
+    "        \"examples/eg-petrol.jpg\",\n",
+    "        \"examples/meeting_chrohosome.png\",\n",
+    "        \"examples/receipt-template-us-modern-red-750px.png\",\n",
+    "        \"examples/stout.png\",\n",
+    "        \"examples/test_receipt.png\"\n",
+    "    ],\n",
+    "    \"synthetic\": [\n",
+    "        \"data/synthetic/images/sample_receipt_001.jpg\",\n",
+    "        \"data/synthetic/images/sample_receipt_002.jpg\",\n",
+    "        \"data/synthetic/images/sample_receipt_003.jpg\"\n",
+    "    ],\n",
+    "    \"sroie\": [\n",
+    "        \"data/sroie/images/sroie_test_000.jpg\",\n",
+    "        \"data/sroie/images/sroie_test_001.jpg\"\n",
+    "    ],\n",
+    "    \"root\": [\n",
+    "        \"test_receipt.png\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Check which images exist and categorize them\n",
+    "available_images = {}\n",
+    "for category, paths in test_image_collections.items():\n",
+    "    available_images[category] = []\n",
+    "    for path in paths:\n",
+    "        if Path(path).exists():\n",
+    "            available_images[category].append(path)\n",
+    "            print(f\"✅ Found {category}: {Path(path).name}\")\n",
+    "        else:\n",
+    "            print(f\"❌ Missing {category}: {path}\")\n",
+    "\n",
+    "# Flatten all available images for easy access\n",
+    "all_available_images = []\n",
+    "for _category, paths in available_images.items():\n",
+    "    all_available_images.extend(paths)\n",
+    "\n",
+    "print(f\"\\nTotal available test images: {len(all_available_images)}\")\n",
+    "for category, paths in available_images.items():\n",
+    "    if paths:\n",
+    "        print(f\"  {category}: {len(paths)} images\")\n",
+    "\n",
+    "print(f\"\\nFirst 5 images for testing: {all_available_images[:5]}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -495,9 +547,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Test JSON extraction on receipt images\nreceipt_images = []\n\n# Collect receipt-like images from all categories\nreceipt_keywords = [\"receipt\", \"petrol\", \"costco\"]\nfor _category, paths in available_images.items():\n    for path in paths:\n        filename_lower = Path(path).name.lower()\n        if any(keyword in filename_lower for keyword in receipt_keywords):\n            receipt_images.append(path)\n\n# Also include synthetic and sroie receipts\nif available_images.get(\"synthetic\"):\n    receipt_images.extend(available_images[\"synthetic\"][:2])\nif available_images.get(\"sroie\"):\n    receipt_images.extend(available_images[\"sroie\"][:1])\n\nif receipt_images:\n    print(\"RECEIPT JSON EXTRACTION TEST\")\n    print(\"=\"*60)\n    \n    # Import the FIXED robust JSON extraction pipeline\n    from internvl.extraction.json_extraction_fixed import extract_json_from_text\n    \n    # Use the structured prompt from prompts.yaml\n    json_extraction_prompt = '<image>\\nread the text and return information in JSON format. I need company name, address, phone number, date, ABN, and total amount'\n    \n    for i, image_path in enumerate(receipt_images[:4], 1):  # Test max 4 receipts\n        print(f\"\\n{i}. Extracting JSON from: {Path(image_path).name}\")\n        print(\"-\" * 50)\n        \n        start_time = time.time()\n        try:\n            response = get_raw_prediction(\n                image_path=image_path,\n                model=model,\n                tokenizer=tokenizer,\n                prompt=json_extraction_prompt,\n                generation_config=generation_config,\n                device=\"auto\"\n            )\n            \n            inference_time = time.time() - start_time\n            print(f\"⏱️  Inference time: {inference_time:.2f}s\")\n            print(\"💼 JSON Response:\")\n            print(response)\n            \n            # Use FIXED robust JSON extraction instead of manual parsing\n            try:\n                parsed_json = extract_json_from_text(response)\n                \n                # Check if extraction was successful (not just default values)\n                if any(value for value in parsed_json.values() if value):\n                    print(f\"✅ Valid JSON extracted with {len([k for k, v in parsed_json.items() if v])} populated fields\")\n                    print(f\"📋 Extracted data: {parsed_json}\")\n                else:\n                    print(\"⚠️  JSON extraction returned default/empty values\")\n                    \n            except Exception as e:\n                print(f\"⚠️  JSON extraction failed: {e}\")\n                \n        except Exception as e:\n            print(f\"❌ Error processing {image_path}: {e}\")\n        \n        print(\"=\" * 60)\nelse:\n    print(\"No receipt images found for JSON extraction test.\")"
+   "source": [
+    "# Test JSON extraction on receipt images\n",
+    "receipt_images = []\n",
+    "\n",
+    "# Collect receipt-like images from all categories\n",
+    "receipt_keywords = [\"receipt\", \"petrol\", \"costco\"]\n",
+    "for _category, paths in available_images.items():\n",
+    "    for path in paths:\n",
+    "        filename_lower = Path(path).name.lower()\n",
+    "        if any(keyword in filename_lower for keyword in receipt_keywords):\n",
+    "            receipt_images.append(path)\n",
+    "\n",
+    "# Also include synthetic and sroie receipts\n",
+    "if available_images.get(\"synthetic\"):\n",
+    "    receipt_images.extend(available_images[\"synthetic\"][:2])\n",
+    "if available_images.get(\"sroie\"):\n",
+    "    receipt_images.extend(available_images[\"sroie\"][:1])\n",
+    "\n",
+    "if receipt_images:\n",
+    "    print(\"RECEIPT JSON EXTRACTION TEST\")\n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    # Import the FIXED robust JSON extraction pipeline\n",
+    "    from internvl.extraction.json_extraction_fixed import extract_json_from_text\n",
+    "    \n",
+    "    # Use the structured prompt from prompts.yaml\n",
+    "    json_extraction_prompt = '<image>\\nread the text and return information in JSON format. I need company name, address, phone number, date, ABN, and total amount'\n",
+    "    \n",
+    "    for i, image_path in enumerate(receipt_images[:4], 1):  # Test max 4 receipts\n",
+    "        print(f\"\\n{i}. Extracting JSON from: {Path(image_path).name}\")\n",
+    "        print(\"-\" * 50)\n",
+    "        \n",
+    "        start_time = time.time()\n",
+    "        try:\n",
+    "            response = get_raw_prediction(\n",
+    "                image_path=image_path,\n",
+    "                model=model,\n",
+    "                tokenizer=tokenizer,\n",
+    "                prompt=json_extraction_prompt,\n",
+    "                generation_config=generation_config,\n",
+    "                device=\"auto\"\n",
+    "            )\n",
+    "            \n",
+    "            inference_time = time.time() - start_time\n",
+    "            print(f\"⏱️  Inference time: {inference_time:.2f}s\")\n",
+    "            print(\"💼 JSON Response:\")\n",
+    "            print(response)\n",
+    "            \n",
+    "            # Use FIXED robust JSON extraction instead of manual parsing\n",
+    "            try:\n",
+    "                parsed_json = extract_json_from_text(response)\n",
+    "                \n",
+    "                # Check if extraction was successful (not just default values)\n",
+    "                if any(value for value in parsed_json.values() if value):\n",
+    "                    print(f\"✅ Valid JSON extracted with {len([k for k, v in parsed_json.items() if v])} populated fields\")\n",
+    "                    print(f\"📋 Extracted data: {parsed_json}\")\n",
+    "                else:\n",
+    "                    print(\"⚠️  JSON extraction returned default/empty values\")\n",
+    "                    \n",
+    "            except Exception as e:\n",
+    "                print(f\"⚠️  JSON extraction failed: {e}\")\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Error processing {image_path}: {e}\")\n",
+    "        \n",
+    "        print(\"=\" * 60)\n",
+    "else:\n",
+    "    print(\"No receipt images found for JSON extraction test.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -509,9 +630,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Test specialized questions for different document types\nspecialized_tests = []\n\n# Define specialized prompts for different document types\ndocument_prompts = {\n    \"bank\": '<image>\\nAnalyze this bank statement. Extract: account number, account holder, balance, and recent transactions.',\n    \"license\": '<image>\\nExtract information from this driver license: name, license number, date of birth, expiry date, and license class.',\n    \"petrol\": '<image>\\nAnalyze this petrol receipt. Extract: station name, fuel type, liters/gallons, price per liter, total amount, and date.',\n    \"general\": '<image>\\nDescribe this document in detail. What information can you extract from it?'\n}\n\n# Categorize available images based on filename\ndocument_categories = {\n    \"bank\": [],\n    \"license\": [],\n    \"petrol\": [],\n    \"general\": []\n}\n\nfor _category, paths in available_images.items():\n    for path in paths:\n        filename_lower = Path(path).name.lower()\n        \n        if \"bank\" in filename_lower or \"statement\" in filename_lower:\n            document_categories[\"bank\"].append(path)\n        elif \"license\" in filename_lower or \"driver\" in filename_lower:\n            document_categories[\"license\"].append(path)\n        elif \"petrol\" in filename_lower or \"costco\" in filename_lower:\n            document_categories[\"petrol\"].append(path)\n        else:\n            document_categories[\"general\"].append(path)\n\nprint(\"SPECIALIZED DOCUMENT ANALYSIS TEST\")\nprint(\"=\"*70)\n\nfor doc_type, images in document_categories.items():\n    if images and doc_type in document_prompts:\n        print(f\"\\n📋 Testing {doc_type.upper()} documents:\")\n        print(\"-\" * 50)\n        \n        # Test the first image of each type\n        test_image = images[0]\n        prompt = document_prompts[doc_type]\n        \n        print(f\"📄 Document: {Path(test_image).name}\")\n        print(f\"❓ Question type: {doc_type}\")\n        \n        start_time = time.time()\n        try:\n            response = get_raw_prediction(\n                image_path=test_image,\n                model=model,\n                tokenizer=tokenizer,\n                prompt=prompt,\n                generation_config=generation_config,\n                device=\"auto\"\n            )\n            \n            inference_time = time.time() - start_time\n            print(f\"⏱️  Inference time: {inference_time:.2f}s\")\n            print(\"🔍 Analysis:\")\n            print(response[:300] + \"...\" if len(response) > 300 else response)\n            \n        except Exception as e:\n            print(f\"❌ Error processing {test_image}: {e}\")\n        \n        print(\"=\" * 70)\n\nif not any(document_categories.values()):\n    print(\"No specialized documents found for testing.\")"
+   "source": [
+    "# Test specialized questions for different document types\n",
+    "specialized_tests = []\n",
+    "\n",
+    "# Define specialized prompts for different document types\n",
+    "document_prompts = {\n",
+    "    \"bank\": '<image>\\nAnalyze this bank statement. Extract: account number, account holder, balance, and recent transactions.',\n",
+    "    \"license\": '<image>\\nExtract information from this driver license: name, license number, date of birth, expiry date, and license class.',\n",
+    "    \"petrol\": '<image>\\nAnalyze this petrol receipt. Extract: station name, fuel type, liters/gallons, price per liter, total amount, and date.',\n",
+    "    \"general\": '<image>\\nDescribe this document in detail. What information can you extract from it?'\n",
+    "}\n",
+    "\n",
+    "# Categorize available images based on filename\n",
+    "document_categories = {\n",
+    "    \"bank\": [],\n",
+    "    \"license\": [],\n",
+    "    \"petrol\": [],\n",
+    "    \"general\": []\n",
+    "}\n",
+    "\n",
+    "for _category, paths in available_images.items():\n",
+    "    for path in paths:\n",
+    "        filename_lower = Path(path).name.lower()\n",
+    "        \n",
+    "        if \"bank\" in filename_lower or \"statement\" in filename_lower:\n",
+    "            document_categories[\"bank\"].append(path)\n",
+    "        elif \"license\" in filename_lower or \"driver\" in filename_lower:\n",
+    "            document_categories[\"license\"].append(path)\n",
+    "        elif \"petrol\" in filename_lower or \"costco\" in filename_lower:\n",
+    "            document_categories[\"petrol\"].append(path)\n",
+    "        else:\n",
+    "            document_categories[\"general\"].append(path)\n",
+    "\n",
+    "print(\"SPECIALIZED DOCUMENT ANALYSIS TEST\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "for doc_type, images in document_categories.items():\n",
+    "    if images and doc_type in document_prompts:\n",
+    "        print(f\"\\n📋 Testing {doc_type.upper()} documents:\")\n",
+    "        print(\"-\" * 50)\n",
+    "        \n",
+    "        # Test the first image of each type\n",
+    "        test_image = images[0]\n",
+    "        prompt = document_prompts[doc_type]\n",
+    "        \n",
+    "        print(f\"📄 Document: {Path(test_image).name}\")\n",
+    "        print(f\"❓ Question type: {doc_type}\")\n",
+    "        \n",
+    "        start_time = time.time()\n",
+    "        try:\n",
+    "            response = get_raw_prediction(\n",
+    "                image_path=test_image,\n",
+    "                model=model,\n",
+    "                tokenizer=tokenizer,\n",
+    "                prompt=prompt,\n",
+    "                generation_config=generation_config,\n",
+    "                device=\"auto\"\n",
+    "            )\n",
+    "            \n",
+    "            inference_time = time.time() - start_time\n",
+    "            print(f\"⏱️  Inference time: {inference_time:.2f}s\")\n",
+    "            print(\"🔍 Analysis:\")\n",
+    "            print(response[:300] + \"...\" if len(response) > 300 else response)\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Error processing {test_image}: {e}\")\n",
+    "        \n",
+    "        print(\"=\" * 70)\n",
+    "\n",
+    "if not any(document_categories.values()):\n",
+    "    print(\"No specialized documents found for testing.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -853,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
